// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar computed usecase-0__ dayNames 1`] = `
Array [
  "Sun",
  "Mon",
  "Tue",
  "Wed",
  "Thu",
  "Fri",
  "Sat",
]
`;

exports[`Calendar computed usecase-0__ days 1`] = `
Array [
  Object {
    "date": 2017-12-31T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 31,
  },
  Object {
    "date": 2018-01-01T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 1,
  },
  Object {
    "date": 2018-01-02T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 2,
  },
  Object {
    "date": 2018-01-03T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 3,
  },
  Object {
    "date": 2018-01-04T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 4,
  },
  Object {
    "date": 2018-01-05T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 5,
  },
  Object {
    "date": 2018-01-06T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 6,
  },
  Object {
    "date": 2018-01-07T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 7,
  },
  Object {
    "date": 2018-01-08T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 8,
  },
  Object {
    "date": 2018-01-09T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 9,
  },
  Object {
    "date": 2018-01-10T00:00:00.000Z,
    "isCurrent": true,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 10,
  },
  Object {
    "date": 2018-01-11T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 11,
  },
  Object {
    "date": 2018-01-12T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 12,
  },
  Object {
    "date": 2018-01-13T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 13,
  },
  Object {
    "date": 2018-01-14T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 14,
  },
  Object {
    "date": 2018-01-15T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 15,
  },
  Object {
    "date": 2018-01-16T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 16,
  },
  Object {
    "date": 2018-01-17T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 17,
  },
  Object {
    "date": 2018-01-18T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 18,
  },
  Object {
    "date": 2018-01-19T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 19,
  },
  Object {
    "date": 2018-01-20T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 20,
  },
  Object {
    "date": 2018-01-21T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 21,
  },
  Object {
    "date": 2018-01-22T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 22,
  },
  Object {
    "date": 2018-01-23T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 23,
  },
  Object {
    "date": 2018-01-24T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 24,
  },
  Object {
    "date": 2018-01-25T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 25,
  },
  Object {
    "date": 2018-01-26T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 26,
  },
  Object {
    "date": 2018-01-27T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 27,
  },
  Object {
    "date": 2018-01-28T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 28,
  },
  Object {
    "date": 2018-01-29T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 29,
  },
  Object {
    "date": 2018-01-30T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 30,
  },
  Object {
    "date": 2018-01-31T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 31,
  },
  Object {
    "date": 2018-02-01T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 1,
  },
  Object {
    "date": 2018-02-02T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 2,
  },
  Object {
    "date": 2018-02-03T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 3,
  },
  Object {
    "date": 2018-02-04T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 4,
  },
  Object {
    "date": 2018-02-05T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 5,
  },
  Object {
    "date": 2018-02-06T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 6,
  },
  Object {
    "date": 2018-02-07T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 7,
  },
  Object {
    "date": 2018-02-08T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 8,
  },
  Object {
    "date": 2018-02-09T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 9,
  },
  Object {
    "date": 2018-02-10T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 10,
  },
  Object {
    "date": 2018-02-11T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 11,
  },
]
`;

exports[`Calendar computed usecase-0__ weeks 1`] = `
Array [
  Array [
    Object {
      "date": 2017-12-31T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 31,
    },
    Object {
      "date": 2018-01-01T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 1,
    },
    Object {
      "date": 2018-01-02T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 2,
    },
    Object {
      "date": 2018-01-03T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 3,
    },
    Object {
      "date": 2018-01-04T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 4,
    },
    Object {
      "date": 2018-01-05T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 5,
    },
    Object {
      "date": 2018-01-06T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 6,
    },
  ],
  Array [
    Object {
      "date": 2018-01-07T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 7,
    },
    Object {
      "date": 2018-01-08T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 8,
    },
    Object {
      "date": 2018-01-09T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 9,
    },
    Object {
      "date": 2018-01-10T00:00:00.000Z,
      "isCurrent": true,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 10,
    },
    Object {
      "date": 2018-01-11T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 11,
    },
    Object {
      "date": 2018-01-12T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 12,
    },
    Object {
      "date": 2018-01-13T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 13,
    },
  ],
  Array [
    Object {
      "date": 2018-01-14T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 14,
    },
    Object {
      "date": 2018-01-15T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 15,
    },
    Object {
      "date": 2018-01-16T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 16,
    },
    Object {
      "date": 2018-01-17T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 17,
    },
    Object {
      "date": 2018-01-18T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 18,
    },
    Object {
      "date": 2018-01-19T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 19,
    },
    Object {
      "date": 2018-01-20T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 20,
    },
  ],
  Array [
    Object {
      "date": 2018-01-21T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 21,
    },
    Object {
      "date": 2018-01-22T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 22,
    },
    Object {
      "date": 2018-01-23T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 23,
    },
    Object {
      "date": 2018-01-24T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 24,
    },
    Object {
      "date": 2018-01-25T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 25,
    },
    Object {
      "date": 2018-01-26T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 26,
    },
    Object {
      "date": 2018-01-27T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 27,
    },
  ],
  Array [
    Object {
      "date": 2018-01-28T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 28,
    },
    Object {
      "date": 2018-01-29T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 29,
    },
    Object {
      "date": 2018-01-30T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 30,
    },
    Object {
      "date": 2018-01-31T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 31,
    },
    Object {
      "date": 2018-02-01T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 1,
    },
    Object {
      "date": 2018-02-02T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 2,
    },
    Object {
      "date": 2018-02-03T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 3,
    },
  ],
  Array [
    Object {
      "date": 2018-02-04T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 4,
    },
    Object {
      "date": 2018-02-05T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 5,
    },
    Object {
      "date": 2018-02-06T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 6,
    },
    Object {
      "date": 2018-02-07T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 7,
    },
    Object {
      "date": 2018-02-08T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 8,
    },
    Object {
      "date": 2018-02-09T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 9,
    },
    Object {
      "date": 2018-02-10T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 10,
    },
  ],
]
`;

exports[`Calendar computed usecase-1__ dayNames 1`] = `
Array [
  "Sun",
  "Mon",
  "Tue",
  "Wed",
  "Thu",
  "Fri",
  "Sat",
]
`;

exports[`Calendar computed usecase-1__ days 1`] = `
Array [
  Object {
    "date": 2017-12-31T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 31,
  },
  Object {
    "date": 2018-01-01T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 1,
  },
  Object {
    "date": 2018-01-02T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 2,
  },
  Object {
    "date": 2018-01-03T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 3,
  },
  Object {
    "date": 2018-01-04T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 4,
  },
  Object {
    "date": 2018-01-05T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 5,
  },
  Object {
    "date": 2018-01-06T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 6,
  },
  Object {
    "date": 2018-01-07T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 7,
  },
  Object {
    "date": 2018-01-08T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 8,
  },
  Object {
    "date": 2018-01-09T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 9,
  },
  Object {
    "date": 2018-01-10T00:00:00.000Z,
    "isCurrent": true,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 10,
  },
  Object {
    "date": 2018-01-11T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 11,
  },
  Object {
    "date": 2018-01-12T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 12,
  },
  Object {
    "date": 2018-01-13T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 13,
  },
  Object {
    "date": 2018-01-14T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 14,
  },
  Object {
    "date": 2018-01-15T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 15,
  },
  Object {
    "date": 2018-01-16T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 16,
  },
  Object {
    "date": 2018-01-17T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 17,
  },
  Object {
    "date": 2018-01-18T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 18,
  },
  Object {
    "date": 2018-01-19T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 19,
  },
  Object {
    "date": 2018-01-20T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 20,
  },
  Object {
    "date": 2018-01-21T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 21,
  },
  Object {
    "date": 2018-01-22T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 22,
  },
  Object {
    "date": 2018-01-23T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 23,
  },
  Object {
    "date": 2018-01-24T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 24,
  },
  Object {
    "date": 2018-01-25T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 25,
  },
  Object {
    "date": 2018-01-26T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 26,
  },
  Object {
    "date": 2018-01-27T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 27,
  },
  Object {
    "date": 2018-01-28T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 28,
  },
  Object {
    "date": 2018-01-29T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 29,
  },
  Object {
    "date": 2018-01-30T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 30,
  },
  Object {
    "date": 2018-01-31T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 31,
  },
  Object {
    "date": 2018-02-01T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 1,
  },
  Object {
    "date": 2018-02-02T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 2,
  },
  Object {
    "date": 2018-02-03T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 3,
  },
  Object {
    "date": 2018-02-04T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 4,
  },
  Object {
    "date": 2018-02-05T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 5,
  },
  Object {
    "date": 2018-02-06T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 6,
  },
  Object {
    "date": 2018-02-07T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 7,
  },
  Object {
    "date": 2018-02-08T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 8,
  },
  Object {
    "date": 2018-02-09T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 9,
  },
  Object {
    "date": 2018-02-10T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 10,
  },
  Object {
    "date": 2018-02-11T00:00:00.000Z,
    "isCurrent": undefined,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 11,
  },
]
`;

exports[`Calendar computed usecase-1__ weeks 1`] = `
Array [
  Array [
    Object {
      "date": 2017-12-31T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 31,
    },
    Object {
      "date": 2018-01-01T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 1,
    },
    Object {
      "date": 2018-01-02T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 2,
    },
    Object {
      "date": 2018-01-03T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 3,
    },
    Object {
      "date": 2018-01-04T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 4,
    },
    Object {
      "date": 2018-01-05T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 5,
    },
    Object {
      "date": 2018-01-06T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 6,
    },
  ],
  Array [
    Object {
      "date": 2018-01-07T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 7,
    },
    Object {
      "date": 2018-01-08T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 8,
    },
    Object {
      "date": 2018-01-09T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 9,
    },
    Object {
      "date": 2018-01-10T00:00:00.000Z,
      "isCurrent": true,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 10,
    },
    Object {
      "date": 2018-01-11T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 11,
    },
    Object {
      "date": 2018-01-12T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 12,
    },
    Object {
      "date": 2018-01-13T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 13,
    },
  ],
  Array [
    Object {
      "date": 2018-01-14T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 14,
    },
    Object {
      "date": 2018-01-15T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 15,
    },
    Object {
      "date": 2018-01-16T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 16,
    },
    Object {
      "date": 2018-01-17T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 17,
    },
    Object {
      "date": 2018-01-18T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 18,
    },
    Object {
      "date": 2018-01-19T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 19,
    },
    Object {
      "date": 2018-01-20T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 20,
    },
  ],
  Array [
    Object {
      "date": 2018-01-21T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 21,
    },
    Object {
      "date": 2018-01-22T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 22,
    },
    Object {
      "date": 2018-01-23T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 23,
    },
    Object {
      "date": 2018-01-24T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 24,
    },
    Object {
      "date": 2018-01-25T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 25,
    },
    Object {
      "date": 2018-01-26T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 26,
    },
    Object {
      "date": 2018-01-27T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 27,
    },
  ],
  Array [
    Object {
      "date": 2018-01-28T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 28,
    },
    Object {
      "date": 2018-01-29T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 29,
    },
    Object {
      "date": 2018-01-30T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 30,
    },
    Object {
      "date": 2018-01-31T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 31,
    },
    Object {
      "date": 2018-02-01T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 1,
    },
    Object {
      "date": 2018-02-02T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 2,
    },
    Object {
      "date": 2018-02-03T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 3,
    },
  ],
  Array [
    Object {
      "date": 2018-02-04T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 4,
    },
    Object {
      "date": 2018-02-05T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 5,
    },
    Object {
      "date": 2018-02-06T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 6,
    },
    Object {
      "date": 2018-02-07T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 7,
    },
    Object {
      "date": 2018-02-08T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 8,
    },
    Object {
      "date": 2018-02-09T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 9,
    },
    Object {
      "date": 2018-02-10T00:00:00.000Z,
      "isCurrent": undefined,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 10,
    },
  ],
]
`;

exports[`Calendar computed usecase-2__ dayNames 1`] = `
Array [
  "Sun",
  "Mon",
  "Tue",
  "Wed",
  "Thu",
  "Fri",
  "Sat",
]
`;

exports[`Calendar computed usecase-2__ days 1`] = `
Array [
  Object {
    "date": 2018-01-28T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": true,
    "number": 28,
  },
  Object {
    "date": 2018-01-29T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": true,
    "number": 29,
  },
  Object {
    "date": 2018-01-30T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": true,
    "number": 30,
  },
  Object {
    "date": 2018-01-31T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": true,
    "number": 31,
  },
  Object {
    "date": 2018-02-01T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": true,
    "number": 1,
  },
  Object {
    "date": 2018-02-02T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": true,
    "number": 2,
  },
  Object {
    "date": 2018-02-03T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": true,
    "number": 3,
  },
  Object {
    "date": 2018-02-04T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": true,
    "number": 4,
  },
  Object {
    "date": 2018-02-05T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": true,
    "number": 5,
  },
  Object {
    "date": 2018-02-06T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": true,
    "number": 6,
  },
  Object {
    "date": 2018-02-07T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": true,
    "number": 7,
  },
  Object {
    "date": 2018-02-08T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": true,
    "number": 8,
  },
  Object {
    "date": 2018-02-09T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": true,
    "number": 9,
  },
  Object {
    "date": 2018-02-10T00:00:00.000Z,
    "isCurrent": true,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 10,
  },
  Object {
    "date": 2018-02-11T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 11,
  },
  Object {
    "date": 2018-02-12T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 12,
  },
  Object {
    "date": 2018-02-13T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 13,
  },
  Object {
    "date": 2018-02-14T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 14,
  },
  Object {
    "date": 2018-02-15T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 15,
  },
  Object {
    "date": 2018-02-16T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 16,
  },
  Object {
    "date": 2018-02-17T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 17,
  },
  Object {
    "date": 2018-02-18T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 18,
  },
  Object {
    "date": 2018-02-19T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 19,
  },
  Object {
    "date": 2018-02-20T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 20,
  },
  Object {
    "date": 2018-02-21T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 21,
  },
  Object {
    "date": 2018-02-22T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 22,
  },
  Object {
    "date": 2018-02-23T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 23,
  },
  Object {
    "date": 2018-02-24T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 24,
  },
  Object {
    "date": 2018-02-25T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 25,
  },
  Object {
    "date": 2018-02-26T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 26,
  },
  Object {
    "date": 2018-02-27T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 27,
  },
  Object {
    "date": 2018-02-28T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": false,
    "isDisabled": false,
    "isInRange": false,
    "number": 28,
  },
  Object {
    "date": 2018-03-01T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 1,
  },
  Object {
    "date": 2018-03-02T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 2,
  },
  Object {
    "date": 2018-03-03T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 3,
  },
  Object {
    "date": 2018-03-04T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 4,
  },
  Object {
    "date": 2018-03-05T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 5,
  },
  Object {
    "date": 2018-03-06T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 6,
  },
  Object {
    "date": 2018-03-07T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 7,
  },
  Object {
    "date": 2018-03-08T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 8,
  },
  Object {
    "date": 2018-03-09T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 9,
  },
  Object {
    "date": 2018-03-10T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 10,
  },
  Object {
    "date": 2018-03-11T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 11,
  },
  Object {
    "date": 2018-03-12T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 12,
  },
  Object {
    "date": 2018-03-13T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 13,
  },
  Object {
    "date": 2018-03-14T00:00:00.000Z,
    "isCurrent": false,
    "isDifferentMonth": true,
    "isDisabled": false,
    "isInRange": false,
    "number": 14,
  },
]
`;

exports[`Calendar computed usecase-2__ weeks 1`] = `
Array [
  Array [
    Object {
      "date": 2018-01-28T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": true,
      "number": 28,
    },
    Object {
      "date": 2018-01-29T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": true,
      "number": 29,
    },
    Object {
      "date": 2018-01-30T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": true,
      "number": 30,
    },
    Object {
      "date": 2018-01-31T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": true,
      "number": 31,
    },
    Object {
      "date": 2018-02-01T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": true,
      "number": 1,
    },
    Object {
      "date": 2018-02-02T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": true,
      "number": 2,
    },
    Object {
      "date": 2018-02-03T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": true,
      "number": 3,
    },
  ],
  Array [
    Object {
      "date": 2018-02-04T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": true,
      "number": 4,
    },
    Object {
      "date": 2018-02-05T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": true,
      "number": 5,
    },
    Object {
      "date": 2018-02-06T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": true,
      "number": 6,
    },
    Object {
      "date": 2018-02-07T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": true,
      "number": 7,
    },
    Object {
      "date": 2018-02-08T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": true,
      "number": 8,
    },
    Object {
      "date": 2018-02-09T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": true,
      "number": 9,
    },
    Object {
      "date": 2018-02-10T00:00:00.000Z,
      "isCurrent": true,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 10,
    },
  ],
  Array [
    Object {
      "date": 2018-02-11T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 11,
    },
    Object {
      "date": 2018-02-12T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 12,
    },
    Object {
      "date": 2018-02-13T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 13,
    },
    Object {
      "date": 2018-02-14T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 14,
    },
    Object {
      "date": 2018-02-15T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 15,
    },
    Object {
      "date": 2018-02-16T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 16,
    },
    Object {
      "date": 2018-02-17T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 17,
    },
  ],
  Array [
    Object {
      "date": 2018-02-18T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 18,
    },
    Object {
      "date": 2018-02-19T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 19,
    },
    Object {
      "date": 2018-02-20T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 20,
    },
    Object {
      "date": 2018-02-21T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 21,
    },
    Object {
      "date": 2018-02-22T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 22,
    },
    Object {
      "date": 2018-02-23T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 23,
    },
    Object {
      "date": 2018-02-24T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 24,
    },
  ],
  Array [
    Object {
      "date": 2018-02-25T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 25,
    },
    Object {
      "date": 2018-02-26T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 26,
    },
    Object {
      "date": 2018-02-27T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 27,
    },
    Object {
      "date": 2018-02-28T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": false,
      "isDisabled": false,
      "isInRange": false,
      "number": 28,
    },
    Object {
      "date": 2018-03-01T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 1,
    },
    Object {
      "date": 2018-03-02T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 2,
    },
    Object {
      "date": 2018-03-03T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 3,
    },
  ],
  Array [
    Object {
      "date": 2018-03-04T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 4,
    },
    Object {
      "date": 2018-03-05T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 5,
    },
    Object {
      "date": 2018-03-06T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 6,
    },
    Object {
      "date": 2018-03-07T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 7,
    },
    Object {
      "date": 2018-03-08T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 8,
    },
    Object {
      "date": 2018-03-09T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 9,
    },
    Object {
      "date": 2018-03-10T00:00:00.000Z,
      "isCurrent": false,
      "isDifferentMonth": true,
      "isDisabled": false,
      "isInRange": false,
      "number": 10,
    },
  ],
]
`;
